<resources>
    <string name="app_name">Zyntra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have_account">Have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="or">OR</string>
</resources>