<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".view.RegisterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:textColor="#044462"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:fontFamily="@font/abeezee"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:textColor="@color/black"
            android:fontFamily="@font/abeezee"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:endIconMode="password_toggle"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:fontFamily="@font/abeezee"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:cornerRadius="@dimen/_7sdp"
        android:textColor="@color/white"
        android:elevation="@dimen/_15ssp"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:backgroundTint="#123654"
        />

    <TextView
        android:id="@+id/have_Acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_15sdp"
        />

</LinearLayout>